small fix to align language selector if its inline

--- a/geonode_mapstore_client/client/themes/geonode/scss/_action-navbar.scss
+++ b/geonode_mapstore_client/client/themes/geonode/scss/_action-navbar.scss
@@ -114,6 +114,9 @@
             border-radius: 0.25rem;
         }
         .gn-language-selector {
+            .inline {
+                padding-right: 2.8rem;
+            }
             &> .btn-default {
                 &.active {
                     color: inherit;
